--- a/plp.html
+++ b/plp.html
@@ -27,7 +27,7 @@
 
     <header class="header1">
         <div class="logo">
-          <a href="homepage.html"><img src="images/icons/logo-01.png" alt="Logo"></a>
+          <a href="index.html"><img src="images/icons/logo-01.png" alt="Logo"></a>
         </div>
     
         <nav class="nav-links">
