--- a/pdp2.html
+++ b/pdp2.html
@@ -27,12 +27,12 @@
 
     <header class="header1">
         <div class="logo">
-          <a href="homepage.html"><img src="images/icons/logo-01.png" alt="Logo"></a>
+          <a href="index.html"><img src="images/icons/logo-01.png" alt="Logo"></a>
         </div>
     
         <nav class="nav-links">
           <a href="#">Home</a>
-          <a href="#">Shop</a>
+          <a href="plp.html">Shop</a>
           <a href="#" class="features-link">Features<span class="hot">HOT</span></a>
           <a href="#">Blog</a>
           <a href="#">About</a>
