new pages added

--- a/signin.html
+++ b/signin.html
@@ -47,7 +47,7 @@
 
     <header class="header1">
         <div class="logo">
-          <a href="index.html"><img src="images/icons/logo-01.png" alt="Logo"></a>
+          <a href="#"><img src="images/icons/logo-01.png" alt="Logo"></a>
         </div>
     
         <nav class="nav-links">
@@ -78,43 +78,8 @@
       </div>
     </header>
 
-    <div class="banner-img">
-      <div class="banner-content">
-          <h1 class="banner-txt">NEW ARRIVALS</h1>
-          <button class="banner-btn">View More</button>
-      </div>
-      <!-- Arrow Buttons -->
-      <button class="prev-arrow">&#10094;</button>
-      <button class="next-arrow">&#10095;</button>
-    </div> 
+    <h1>Sign In</h1>
 
-    <div class="categories">
-      <div class="category-card">
-          <div class="category-info">
-              <h2>Women</h2>
-              <p>Spring 2018</p>
-          </div>
-          <img src="images/banner-04.jpg" alt="Women">
-          <button class="view-more">View More</button>
-      </div>  
-      <div class="category-card">
-          <div class="category-info">
-              <h2>Men</h2>
-              <p>Spring 2018</p>
-          </div>
-          <img src="images/banner-05.jpg" alt="Men">
-          <button class="view-more">View More</button>
-      </div>
-        <div class="category-card">
-          <div class="category-info">
-              <h2>Accessories</h2>
-              <p>New Trend</p>
-          </div>
-          <img src="images/banner-03.jpg" alt="Accessories">
-          <button class="view-more">View More</button>
-      </div>
-    </div>
-  
     <footer class="footer">
         <div class="footer-container">
           <div class="footer-column">
