--- a/plp.html
+++ b/plp.html
@@ -51,7 +51,7 @@
         </div>
     
         <nav class="nav-links">
-          <a href="#">Home</a>
+          <a href="index.html">Home</a>
           <a href="#">Shop</a>
           <a href="#" class="features-link">Features<span class="hot">HOT</span></a>
           <a href="#">Blog</a>
