data layer for category

--- a/features.html
+++ b/features.html
@@ -6,19 +6,19 @@
     <title>Ganesh Store</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
     <script>
-        window.dataLayer = { 
-          pageName: "Rajesh SPA",
-          pageView:"viewName",
-          userType: "Guest",
-          userID:"369369",
-          PageTitle:document.title,
-          timestamp:new Date().toString(),
-          pageUrl:window.location.href,
-          categoryId:"about",
-        };
-      </script>
+      window.dataLayer = { 
+        pageName: "Rajesh SPA",
+        pageView:"viewName",
+        userType: "Guest",
+        userID:"369369",
+        PageTitle:document.title,
+        timestamp:new Date().toString(),
+        pageUrl:window.location.href,
+        categoryId:"features",
+      };
+    </script>
+    <script src="script.js"></script>
     <script>
       !(function (e,a,n,t) {
         if (a) return;
@@ -59,7 +59,7 @@
 
     <header class="header1">
         <div class="logo">
-          <a href="#"><img src="images/icons/logo-01.png" alt="Logo"></a>
+          <a href="index.html"><img src="images/icons/logo-01.png" alt="Logo"></a>
         </div>
     
         <nav class="nav-links">
@@ -90,7 +90,7 @@
       </div>
     </header>
 
-    <h1>About</h1>
+    <h1>Features</h1>
 
     <footer class="footer">
         <div class="footer-container">
