--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>Ganesh Store</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script>
+      window.dataLayer = { 
+        pageName: "Rajesh SPA",
+        pageView:"viewName",
+        userType: "Guest",
+        userID:"369369",
+        PageTitle:document.title,
+        timestamp:new Date().toString(),
+        pageUrl:window.location.href,
+        categoryId:"index",
+      };
+    </script>
     <script src="script.js"></script>
     <script>
       !(function (e,a,n,t) {
@@ -53,7 +65,7 @@
         <nav class="nav-links">
           <a href="index.html">Home</a>
           <a href="plp.html">Shop</a>
-          <a href="#" class="features-link">Features<span class="hot">HOT</span></a>
+          <a href="features.html" class="features-link">Features<span class="hot">HOT</span></a>
           <a href="blog.html">Blog</a>
           <a href="about.html">About</a>
           <a href="signin.html">Sign In</a>
