--- a/plp.html
+++ b/plp.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="plpstyle.css">
     <script src="script.js"></script>
     <script>
+      window.dataLayer = { 
+        pageName: "Rajesh SPA",
+        pageView:"viewName",
+        userType: "Guest",
+        userID:"369369",
+        PageTitle:document.title,
+        timestamp:new Date().toString(),
+        pageUrl:window.location.href,
+        categoryId:"plp",
+      };
+    </script>
+    <script>
       !(function (e,a,n,t) {
         if (a) return;
         var i=e.head;
@@ -52,11 +64,11 @@
     
         <nav class="nav-links">
           <a href="index.html">Home</a>
-          <a href="#">Shop</a>
-          <a href="#" class="features-link">Features<span class="hot">HOT</span></a>
-          <a href="#">Blog</a>
-          <a href="#">About</a>
-          <a href="#">Sign In</a>
+          <a href="plp.html">Shop</a>
+          <a href="features.html" class="features-link">Features<span class="hot">HOT</span></a>
+          <a href="blog.html">Blog</a>
+          <a href="about.html">About</a>
+          <a href="signin.html">Sign In</a>
         </nav>
     
         <div class="icons">
