--- a/signin.html
+++ b/signin.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <script>
+        window.dataLayer = { 
+          pageName: "Rajesh SPA",
+          pageView:"viewName",
+          userType: "Guest",
+          userID:"369369",
+          PageTitle:document.title,
+          timestamp:new Date().toString(),
+          pageUrl:window.location.href,
+          categoryId:"signin",
+        };
+      </script>
+    <script>
       !(function (e,a,n,t) {
         if (a) return;
         var i=e.head;
@@ -53,7 +65,7 @@
         <nav class="nav-links">
           <a href="index.html">Home</a>
           <a href="plp.html">Shop</a>
-          <a href="#" class="features-link">Features<span class="hot">HOT</span></a>
+          <a href="features.html" class="features-link">Features<span class="hot">HOT</span></a>
           <a href="blog.html">Blog</a>
           <a href="about.html">About</a>
           <a href="signin.html">Sign In</a>
