--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <script>
       window.dataLayer = { 
-        pageName: "Rajesh SPA",
-        pageView:"viewName",
+        pageName: "index",
+        pageView:"index",
         userType: "Guest",
         userID:"369369",
         PageTitle:document.title,
