--- a/signin.html
+++ b/signin.html
@@ -9,8 +9,8 @@
     <script src="script.js"></script>
     <script>
         window.dataLayer = { 
-          pageName: "Rajesh SPA",
-          pageView:"viewName",
+          pageName: "signin",
+          pageView:"signin",
           userType: "Guest",
           userID:"369369",
           PageTitle:document.title,
