--- a/blog.html
+++ b/blog.html
@@ -9,8 +9,8 @@
     <script src="script.js"></script>
     <script>
         window.dataLayer = { 
-          pageName: "Rajesh SPA",
-          pageView:"viewName",
+          pageName: "blog",
+          pageView:"blog",
           userType: "Guest",
           userID:"369369",
           PageTitle:document.title,
