--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
           pageName: "blog",
           pageView:"blog",
           userType: "Guest",
-          userID:"369369",
+          userID:"8C2811a503C7c5a",
           PageTitle:document.title,
           timestamp:new Date().toString(),
           pageUrl:window.location.href,
