--- a/cart.html
+++ b/cart.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="cart.css">
     <script>
       window.dataLayer = { 
-        pageName: "index",
-        pageView:"index",
+        pageName: "cart",
+        pageView:"cart",
         userType: "Guest",
         userID:"8C2811a503C7c5a",
         PageTitle:document.title,
         timestamp:new Date().toString(),
         pageUrl:window.location.href,
-        categoryId:"index",
+        categoryId:"cart",
       };
     </script>
     <script>
@@ -37,7 +37,7 @@
         3000
       );
     </script>
-    <script src="https://assets.adobedtm.com/01296dd00565/71071a7d0a72/launch-e963f057fd63-development.min.js" async></script>
+    <script src="https://assets.adobedtm.com/e78d80a30a77/a51075c9bb8f/launch-f538f43cf521-development.min.js" async></script>
 </head>
 <body>
     <header>
