--- a/cart.html
+++ b/cart.html
@@ -96,6 +96,7 @@
         <div class="cart-items"></div>
         <div class="cart-summary">
           <h2>Total: $<span class="cart-total">0.00</span></h2>
+          <button class="place-order">Place Your Order</button>
         </div>
     </main>
 
@@ -164,6 +165,7 @@
         document.addEventListener("DOMContentLoaded", () => {
             const cartItemsContainer = document.querySelector(".cart-items");
             const cartTotalElement = document.querySelector(".cart-total");
+            const placeOrderButton = document.querySelector(".place-order");
 
             // Get cart from localStorage
             const cart = JSON.parse(localStorage.getItem("cart")) || [];
@@ -185,6 +187,11 @@
                     <h3>${item.title}</h3>
                     <p>Price: $${item.price.toFixed(2)}</p>
                     <p>Quantity: ${item.quantity}</p>
+                    <div class="quantity-controls">
+                      <button class="decrease-quantity" data-index="${index}">-</button>
+                      <span class="item-quantity">${item.quantity}</span>
+                      <button class="increase-quantity" data-index="${index}">+</button>
+                    </div>
                 </div>
                 <button class="remove-item" data-index="${index}">Remove</button>
                 `;
@@ -193,23 +200,52 @@
             });
 
             // Calculate total price
-            const totalPrice = cart.reduce((sum, item) => sum + item.price * item.quantity, 0);
-            cartTotalElement.textContent = totalPrice.toFixed(2);
+            const updateTotalPrice = () => {
+              const totalPrice = cart.reduce((sum, item) => sum + item.price * item.quantity, 0);
+              cartTotalElement.textContent = totalPrice.toFixed(2);
+            };
+            updateTotalPrice();
+
+            // Handle quantity increase
+            document.querySelectorAll(".increase-quantity").forEach((button) => {
+                button.addEventListener("click", (e) => {
+                    const index = e.target.dataset.index;
+                    cart[index].quantity += 1;
+                    localStorage.setItem("cart", JSON.stringify(cart));
+                    e.target.previousElementSibling.textContent = cart[index].quantity;
+                    updateTotalPrice();
+                });
+            });
+
+            // Handle quantity decrease
+            document.querySelectorAll(".decrease-quantity").forEach((button) => {
+                button.addEventListener("click", (e) => {
+                    const index = e.target.dataset.index;
+                    if (cart[index].quantity > 1) {
+                        cart[index].quantity -= 1;
+                        localStorage.setItem("cart", JSON.stringify(cart));
+                        e.target.nextElementSibling.textContent = cart[index].quantity;
+                        updateTotalPrice();
+                    }
+                });
+            });
 
             // Handle item removal
             document.querySelectorAll(".remove-item").forEach((button) => {
                 button.addEventListener("click", (e) => {
                 const index = e.target.dataset.index;
-
-                // Remove item from cart
                 cart.splice(index, 1);
                 localStorage.setItem("cart", JSON.stringify(cart));
-
-                // Refresh the cart page
                 window.location.reload();
                 });
             });
+
+            // Handle order placement
+            placeOrderButton.addEventListener("click", () => {
+              localStorage.removeItem("cart");
+              window.location.href = "thankyou.html";
             });
+          });
 
     </script>
 </body>
