--- a/thankyou.html
+++ b/thankyou.html
@@ -1,46 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ganesh Store</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="plpstyle.css">
-    <script src="plpscript.js" defer></script>
-    <script>
-      window.dataLayer = { 
-        pageName: "shop",
-        pageView:"shop",
-        userType: "Guest",
-        userID:"8C2811a503C7c5a",
-        PageTitle:document.title,
-        timestamp:new Date().toString(),
-        pageUrl:window.location.href,
-        categoryId:"plp",
-      };
-    </script>
-    <script>
-      !(function (e,a,n,t) {
-        if (a) return;
-        var i=e.head;
-        if(i){
-          var o=e.createElement("style");
-          (o.id="alloy-prehiding"),
-          i.appendChild(o),
-          setTimeout(function(){
-            o.parentNode && o.parentNode.removeChild(o);
-          },t);
-        }
-      })(
-        document,
-        document.location.href.indexOf("adobe_authoring_enabled")!==-1,
-        "body {opacity:0 !important}",
-        3000
-      );
-    </script>
-    <script src="https://assets.adobedtm.com/01296dd00565/71071a7d0a72/launch-e963f057fd63-development.min.js" async></script>
-</head>
-<body>
+    <link rel="stylesheet" href="style.css">
+    <title>Thank You</title>
+  </head>
+  <body>
     <header>
         <nav class="nav1">
             <p>Free shipping for standard order over $100</p>
@@ -80,46 +48,20 @@
             <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
           </svg></div>
         </a>
-          <a href="cart.html">
-            <div class="icon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-              <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
-            </svg></div>
-          </a>
+          <div class="icon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
+          </svg></div>
         </div>
+
+        <div class="mobile-toggle" onclick="toggleNavbar()">
+          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+              <path d="M2 2h12a1 1 0 0 1 0 2H2a1 1 0 0 1 0-2zm0 4h12a1 1 0 0 1 0 2H2a1 1 0 0 1 0-2zm0 4h12a1 1 0 0 1 0 2H2a1 1 0 0 1 0-2zm0 4h12a1 1 0 0 1 0 2H2a1 1 0 0 1 0-2z"/>
+          </svg>
+      </div>
     </header>
 
-    <header class="header2">  
-        <nav class="nav-links">
-          <a href="#" data-category="all">All Products</a>
-          <a href="#" data-category="women">Women</a>
-          <a href="#" data-category="men">Men</a>
-          <a href="#" data-category="bag">Bag</a>
-          <a href="#" data-category="shoes">Shoes</a>
-          <a href="#" data-category="watches">Watches</a>
-        </nav>
-    
-        <div class="icons1">
-           <div class="icon">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-filter" viewBox="0 0 16 16">
-                   <path d="M6 10.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5m-2-3a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5m-2-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5"/>
-                </svg> Filter
-           </div>
-           <div class="icon">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                    <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
-                </svg> Search
-           </div>
-        </div>
-    </header>
+    <h1 style="padding: 20% 20% 20% 35%;">Thank you for your order!</h1>
 
-    <div class="product-grid">
-      <!-- This grid will be dynamically populated by JavaScript -->
-    </div>
-
-    <div class="center-container">
-      <button class="load-more">LOAD MORE</button>
-    </div>    
-    
     <footer class="footer">
         <div class="footer-container">
           <div class="footer-column">
@@ -160,11 +102,12 @@
           </div>
           <div class="footer-column">
             <h3>NEWSLETTER</h3>
-            <form>
-              <input type="email" placeholder="email@example.com" required />
+            <form id="newsletter-form">
+              <input type="email" id="email-input" placeholder="email@example.com" required />
               <button type="submit">SUBSCRIBE</button>
             </form>
           </div>
+          <div id="popup-message" class="hidden"></div>
         </div>
         <div class="footer-bottom">
           <div class="payment-icons">
@@ -179,5 +122,5 @@
             </div>
         </div>
     </footer>
-</body>
+  </body>
 </html>
