data layer for category

--- a/plp.html
+++ b/plp.html
@@ -16,7 +16,7 @@
         PageTitle:document.title,
         timestamp:new Date().toString(),
         pageUrl:window.location.href,
-        categoryId:"plp",
+        categoryId: 'all'
       };
     </script>
     <script>
@@ -90,7 +90,7 @@
 
     <header class="header2">  
         <nav class="nav-links">
-          <a href="#" data-category="all">All Products</a>
+          <a href="#" data-category="all" class="active">All Products</a>
           <a href="#" data-category="women">Women</a>
           <a href="#" data-category="men">Men</a>
           <a href="#" data-category="bag">Bag</a>
