datalayer updated for categories

--- a/plp.html
+++ b/plp.html
@@ -8,6 +8,20 @@
     <link rel="stylesheet" href="plpstyle.css">
     <script src="plpscript.js" defer></script>
     <script>
+      function getCategoryId() {
+        const urlPath = window.location.pathname.toLowerCase();
+        if (urlPath.includes("men")) {
+          return "men";
+        } else if (urlPath.includes("women")) {
+          return "women";
+        } else if (urlPath.includes("shoes")) {
+          return "shoes";
+        } else if (urlPath.includes("watches")) {
+          return "watches";
+        } else {
+          return "unknown"; // Default or fallback value
+        }
+      }
       window.dataLayer = { 
         pageName: "shop",
         pageView:"shop",
@@ -16,7 +30,7 @@
         PageTitle:document.title,
         timestamp:new Date().toString(),
         pageUrl:window.location.href,
-        categoryId: 'all'
+        categoryId: getCategoryId()
       };
     </script>
     <script>
